kubernetes/apps/observability/headlamp/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
    - headlamp.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          namespace: observability
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
